--- a/viridian/barnacles/network-manager/Makefile
+++ b/viridian/barnacles/network-manager/Makefile
@@ -8,8 +8,6 @@ SHELL := /bin/bash
 BUILD_TYPE := debug
 RUNNING_IN_DOCKER := false
 
-
-
 help:
 	@ # Print available make target information
 	echo -e "help"
@@ -17,15 +15,33 @@ help:
 
 
 
-# Building and setting up system:
-G_C_FLAGS := $(shell pkg-config --cflags --libs libnm)
-ifeq ($(BUILD_TYPE),debug)
-	G_C_FLAGS := $(G_C_FLAGS) -Og
-endif
+# Compilation flags:
 
-G_C_FLAGS_GTK_3 := $(G_C_FLAGS) $(shell pkg-config --cflags --libs gtk+-3.0)
-G_C_FLAGS_GTK_4 := $(G_C_FLAGS) $(shell pkg-config --cflags --libs gtk4)
-G_C_FLAGS_SECRET := $(G_C_FLAGS) $(shell pkg-config --cflags --libs libsecret-1)
+GCC_COMPILATION_FLAGS_BASE :=
+ifeq ($(BUILD_TYPE),debug)
+	GCC_COMPILATION_FLAGS_BASE := $(GCC_COMPILATION_FLAGS_BASE) -Og
+endif
+GCC_COMPILATION_FLAGS := $(GCC_COMPILATION_FLAGS_BASE) -Wall -Wextra -Wpedantic -Wshadow -Wpointer-arith -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wformat=2 -Werror
+
+RAW_GCC_FLAGS_GLIB := $(shell pkg-config --cflags --libs glib-2.0)
+GCC_FLAGS_GLIB := $(GCC_COMPILATION_FLAGS_BASE) $(RAW_GCC_FLAGS_GLIB:-I%=-isystem %)
+
+RAW_GCC_FLAGS_LIBNM := $(shell pkg-config --cflags --libs libnm)
+GCC_FLAGS_LIBNM := $(GCC_COMPILATION_FLAGS) $(RAW_GCC_FLAGS_LIBNM:-I%=-isystem %)
+
+RAW_GCC_FLAGS_GTK3 := $(shell pkg-config --cflags --libs libnm gtk+-3.0)
+GCC_FLAGS_GTK3 := $(GCC_COMPILATION_FLAGS) $(RAW_GCC_FLAGS_GTK3:-I%=-isystem %)
+
+RAW_GCC_FLAGS_GTK4 := $(shell pkg-config --cflags --libs libnm gtk4)
+GCC_FLAGS_GTK4 := $(GCC_COMPILATION_FLAGS) $(RAW_GCC_FLAGS_GTK4:-I%=-isystem %)
+
+RAW_GCC_FLAGS_LIBSECRET := $(shell pkg-config --cflags --libs libnm libsecret-1)
+GCC_FLAGS_LIBSECRET := $(GCC_COMPILATION_FLAGS) $(RAW_GCC_FLAGS_LIBSECRET:-I%=-isystem %)
+
+
+
+# Building and setting up system:
+
 BUILD_ARCH := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 PLUGIN_NAME := seasidevpn
@@ -38,12 +54,15 @@ SERVICE_DIR := /usr/libexec
 NM_DBUS_DIR := /usr/share/dbus-1/system.d
 PLUGIN_INTERFACE_BASE := $(PLUGIN_DIR)/libnm-vpn-editor-$(PLUGIN_NAME)
 
-REEF_DIR := ../../reef
+VIRIDIAN_DIR := ../..
+REEF_DIR := $(VIRIDIAN_DIR)/reef
 NM_CONFIGURATION_DIR := configuration
+NM_INCLUDE_DIR := include
 NM_PLUGIN_DIR := plugin
 NM_EDITOR_DIR := editor
 NM_BUILD_DIR := build
 NM_BIN_DIR := $(REEF_DIR)/target/$(BUILD_TYPE)
+SHARED_LIBRARY := $(REEF_DIR)/shared_library/include
 
 INSTALL_BIN := $(BIN_DIR)/libseaside.so
 INSTALL_PLUGIN := $(SERVICE_DIR)/nm-$(PLUGIN_NAME)-service
@@ -55,29 +74,98 @@ INSTALL_INTERFACE_GTK4 := $(PLUGIN_INTERFACE_BASE)-gtk4.so
 INSTALL_DIALOG := $(SERVICE_DIR)/nm-$(PLUGIN_NAME)-auth-dialog
 
 EXTRA_FLAGS := -DSEASIDE_PLUGIN_SERVICE="\"$(SERVICE_NAME)\"" -DEDITOR_INTERFACE_PATH="\"$(PLUGIN_INTERFACE_BASE)\""
+EDITOR_PLUGIN_INCLUDES := -I$(SHARED_LIBRARY) -I$(NM_INCLUDE_DIR)
+
+CLANG_CONFIGURATION_FILE := $(VIRIDIAN_DIR)/.clang-tidy
+CLANG_FORMATTING_FILE := $(VIRIDIAN_DIR)/.clang-format
 
 
-dir-build:
-	@ # Create build directory
+
+# Build accessories:
+
+create-build-directory:
+	@ # Ensure build directory exists
 	mkdir -p $(NM_BUILD_DIR)
-.PHONY: dir-build
+.PHONY: create-build-directory
 
-editor-build: dir-build
-	@ # Build network manager reef editor
-	glib-compile-resources $(NM_EDITOR_DIR)/gresource.xml --sourcedir=$(NM_EDITOR_DIR) --target=$(NM_BUILD_DIR)/resources.gen.c --generate-source
-	gcc $(NM_EDITOR_DIR)/auth_dialog.c -o $(NM_BUILD_DIR)/auth_dialog $(G_C_FLAGS_SECRET)
-	gcc -fPIC -shared $(NM_EDITOR_DIR)/editor.c $(NM_EDITOR_DIR)/editor.h -o $(NM_BUILD_DIR)/editor.so $(G_C_FLAGS) $(EXTRA_FLAGS)
-	gcc -fPIC -shared $(NM_EDITOR_DIR)/*.h $(NM_EDITOR_DIR)/interface_gtk3.c $(NM_BUILD_DIR)/resources.gen.c -o $(NM_BUILD_DIR)/interface-gtk3.so $(EXTRA_FLAGS) $(G_C_FLAGS_GTK_3)
-	gcc -fPIC -shared $(NM_EDITOR_DIR)/*.h $(NM_EDITOR_DIR)/interface_gtk4.c $(NM_BUILD_DIR)/resources.gen.c -o $(NM_BUILD_DIR)/interface-gtk4.so $(EXTRA_FLAGS) $(G_C_FLAGS_GTK_4)
+$(SHARED_LIBRARY)/seaside.h:
+	@ # Compile rust shared library
+	$(MAKE) -C $(REEF_DIR) -s --no-print-directory build-lib
+
+$(NM_INCLUDE_DIR)/common.h: $(SHARED_LIBRARY)/seaside.h
+	@ # The common header depends on the rust shared library
+
+$(NM_BUILD_DIR)/resources.gen.c: $(NM_EDITOR_DIR)/gresource.xml | create-build-directory
+	@ # Generate GLib resources source file
+	glib-compile-resources $< --sourcedir=$(NM_EDITOR_DIR) --target=$@ --generate-source
+
+
+
+# Compile C wrappers:
+
+$(NM_BUILD_DIR)/resources.gen.o: $(NM_BUILD_DIR)/resources.gen.c | create-build-directory
+	@
+	gcc -c $< -o $@ $(GCC_FLAGS_GLIB)
+
+$(NM_BUILD_DIR)/auth_dialog.o: $(NM_EDITOR_DIR)/auth_dialog.c | create-build-directory
+	@
+	# clang-tidy --config-file=$(CLANG_CONFIGURATION_FILE) $< -- $(GCC_FLAGS_LIBSECRET)
+	gcc -fPIC -c $< -o $@ $(GCC_FLAGS_LIBSECRET)
+
+$(NM_BUILD_DIR)/editor.o: $(NM_EDITOR_DIR)/editor.c $(NM_EDITOR_DIR)/editor.h $(NM_INCLUDE_DIR)/common.h | create-build-directory
+	@
+	# clang-tidy --config-file=$(CLANG_CONFIGURATION_FILE) $< -- $(EDITOR_PLUGIN_INCLUDES) $(EXTRA_FLAGS) $(GCC_FLAGS_LIBNM)
+	gcc -fPIC $(EDITOR_PLUGIN_INCLUDES) -c $< -o $@ $(EXTRA_FLAGS) $(GCC_FLAGS_LIBNM)
+
+$(NM_BUILD_DIR)/interface_gtk3.o: $(NM_EDITOR_DIR)/interface_gtk3.c $(NM_EDITOR_DIR)/interface.h $(NM_EDITOR_DIR)/editor.h | create-build-directory
+	@
+	gcc -fPIC -c $< -o $@ $(EXTRA_FLAGS) $(GCC_FLAGS_GTK3)
+
+$(NM_BUILD_DIR)/interface_gtk4.o: $(NM_EDITOR_DIR)/interface_gtk4.c $(NM_EDITOR_DIR)/interface.h $(NM_EDITOR_DIR)/editor.h | create-build-directory
+	@
+	gcc -fPIC -c $< -o $@ $(EXTRA_FLAGS) $(GCC_FLAGS_GTK4)
+
+$(NM_BUILD_DIR)/plugin.o: $(NM_PLUGIN_DIR)/plugin.c $(NM_PLUGIN_DIR)/plugin.h $(SHARED_LIBRARY)/seaside.h $(NM_INCLUDE_DIR)/common.h | create-build-directory
+	@
+	gcc -fPIC $(EDITOR_PLUGIN_INCLUDES) -c $< -o $@ $(EXTRA_FLAGS) $(GCC_FLAGS_LIBNM)
+
+
+
+# Link C wrappers:
+
+$(NM_BUILD_DIR)/auth_dialog: $(NM_BUILD_DIR)/auth_dialog.o
+	@
+	gcc $^ -o $@ $(GCC_FLAGS_LIBSECRET)
+
+$(NM_BUILD_DIR)/editor.so: $(NM_BUILD_DIR)/editor.o
+	@
+	gcc -shared $^ -o $@ $(GCC_FLAGS_LIBNM)
+
+$(NM_BUILD_DIR)/interface-gtk3.so: $(NM_BUILD_DIR)/interface_gtk3.o $(NM_BUILD_DIR)/resources.gen.o
+	@
+	gcc -shared $^ -o $@ $(GCC_FLAGS_GTK3)
+
+$(NM_BUILD_DIR)/interface-gtk4.so: $(NM_BUILD_DIR)/interface_gtk4.o $(NM_BUILD_DIR)/resources.gen.o
+	@
+	gcc -shared $^ -o $@ $(GCC_FLAGS_GTK4)
+
+$(NM_BUILD_DIR)/plugin: $(NM_BUILD_DIR)/plugin.o
+	@
+	gcc $^ -o $@ $(GCC_FLAGS_LIBNM)
+
+
+
+# Build everything:
+
+editor-build: $(NM_BUILD_DIR)/auth_dialog $(NM_BUILD_DIR)/editor.so $(NM_BUILD_DIR)/interface-gtk3.so $(NM_BUILD_DIR)/interface-gtk4.so
+	@
 .PHONY: editor-build
 
-plugin-build: dir-build
-	@ # Build network manager reef plugin
-	$(MAKE) -C $(REEF_DIR) -s --no-print-directory build-lib
-	gcc -fPIC $(NM_PLUGIN_DIR)/plugin.c $(NM_PLUGIN_DIR)/plugin.h -o $(NM_BUILD_DIR)/plugin $(G_C_FLAGS)
+plugin-build: $(NM_BUILD_DIR)/plugin
+	@
 .PHONY: plugin-build
 
-config-build: dir-build
+config-build: create-build-directory
 	@ # Build network manager reef configuration
 	sed "s|SEASIDE-PLUGIN-NAME|$(PLUGIN_NAME)|" $(NM_CONFIGURATION_DIR)/descriptor.ini > $(NM_BUILD_DIR)/descriptor.ini.gen
 	sed -i "s|DBUS-SERVICE-NAME|$(SERVICE_NAME)|" $(NM_BUILD_DIR)/descriptor.ini.gen
@@ -89,6 +177,10 @@ config-build: dir-build
 build: editor-build plugin-build config-build
 	@ # Build network manager reef plugin
 .PHONY: build
+
+
+
+# Install and run the artifacts:
 
 install: build
 	@ # Install network manager reef plugin
@@ -106,6 +198,7 @@ endif
 .PHONY: install
 
 run: install
+	@
 	cd $(SERVICE_DIR)
 ifeq ($(BUILD_TYPE),debug)
 	sudo -E G_MESSAGES_DEBUG=all ./nm-$(PLUGIN_NAME)-service
@@ -113,6 +206,20 @@ else
 	sudo ./nm-$(PLUGIN_NAME)-service
 endif
 .PHONY: install
+
+
+
+# Lint C sources:
+
+lint:
+	@
+	clang-format --Werror --sort-includes --style=file:$(CLANG_FORMATTING_FILE) --dry-run **/*.c **/*.h
+.PHONY: lint
+
+format:
+	@
+	clang-format --Werror --sort-includes --style=file:$(CLANG_FORMATTING_FILE) **/*.c **/*.h
+.PHONY: format
 
 
 
